# nginx-app-manager

./: .gitignore  README.md  pyproject.toml
examples/: config.dev.yaml  pslab.simubox.org.conf
src/nam/: __init__.py  cli.py  config.py  main.py  models.py  tui.py
src/nam/services/: app_service.py  backup_service.py  health_service.py  nginx_service.py  system_service.py  template_service.py
src/nam/templates/: nginx_server.conf.j2
src/nam/utils/: logging_utils.py  paths.py  shell.py  table.py  validators.py
tests/: test_app_service.py  test_template_render.py  test_validators.py
