[project]
name = "nginx-app-manager"
version = "0.1.0"
description = "A CLI and TUI for safely managing Nginx reverse proxy server blocks on Ubuntu."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "nginx-app-manager contributors" }]
dependencies = [
  "click>=8.1.7",
  "jinja2>=3.1.4",
  "loguru>=0.7.2",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.1",
  "textual>=0.79.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[project.scripts]
nam = "nam.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nam"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
